sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnsupportedVariable/testclient.prog
simstep 48 1
getvariable 0xa1 0xff dummy
simstep 49 1
